--- a/scripts/install
+++ b/scripts/install
@@ -9,8 +9,8 @@
 source _common.sh
 source /usr/share/yunohost/helpers
 
-
-REGISTRATION_TOKEN
+gitea_url=$YNH_APP_ARG_GITLAB_URL
+token=$YNH_APP_ARG_TOKEN
 
 #=================================================
 # APP "BUILD" (DEPLOYING SOURCES, VENV, COMPILING ETC)
@@ -53,7 +53,7 @@ chown $app:$app "$install_dir/some_config_file"
 # SETUP APPLICATION WITH CURL
 #=================================================
 
-./act_runner register --instance http://192.168.8.8:3000 --token $registration_token --no-interactive
+./act_runner register --instance $gitea_url --token $token --no-interactive
 
 #=================================================
 # GENERIC FINALIZATION
