--- a/scripts/install
+++ b/scripts/install
@@ -30,7 +30,7 @@ chown -R $app:www-data "$install_dir"
 ynh_script_progression --message="Adding system configurations related to $app..." --weight=1
 
 # Create a dedicated NGINX config using the conf/nginx.conf template
-ynh_add_nginx_config
+#ynh_add_nginx_config
 
 # Create a dedicated systemd config
 ynh_add_systemd_config
@@ -48,10 +48,6 @@ yunohost service add $app --description="A short description of the app" --log="
 
 #chmod 400 "$install_dir/some_config_file"
 #chown $app:$app "$install_dir/some_config_file"
-
-#=================================================
-# SETUP APPLICATION WITH CURL
-#=================================================
 
 ./act_runner register --instance $gitea_url --token $token --no-interactive
 
