--- a/scripts/install
+++ b/scripts/install
@@ -9,7 +9,7 @@
 source _common.sh
 source /usr/share/yunohost/helpers
 
-gitea_url=$YNH_APP_ARG_GITLAB_URL
+gitea_url=$YNH_APP_ARG_GITEA_URL
 token=$YNH_APP_ARG_TOKEN
 
 #=================================================
@@ -35,7 +35,7 @@ ynh_script_progression --message="Adding system configurations related to $app..
 # Create a dedicated systemd config
 ynh_add_systemd_config
 
-yunohost service add $app --description="A short description of the app" --log="/var/log/$app/$app.log"
+yunohost service add $app --description="Runner for Gitea" --log="/var/log/$app/$app.log"
 
 #=================================================
 # APP INITIAL CONFIGURATION
@@ -49,7 +49,9 @@ yunohost service add $app --description="A short description of the app" --log="
 #chmod 400 "$install_dir/some_config_file"
 #chown $app:$app "$install_dir/some_config_file"
 
-./act_runner register --instance $gitea_url --token $token --no-interactive
+pushd $install_dir
+	./act_runner register --instance $gitea_url --token $token --no-interactive
+popd
 
 #=================================================
 # GENERIC FINALIZATION
