--- a/scripts/install
+++ b/scripts/install
@@ -42,12 +42,7 @@ yunohost service add $app --description="Runner for Gitea" --log="/var/log/$app/
 #=================================================
 # ADD A CONFIGURATION
 #=================================================
-#ynh_script_progression --message="Adding a configuration file..." --weight=1
-
-#ynh_add_config --template="some_config_file" --destination="$install_dir/some_config_file"
-
-#chmod 400 "$install_dir/some_config_file"
-#chown $app:$app "$install_dir/some_config_file"
+ynh_script_progression --message="Adding a configuration file..." --weight=1
 
 pushd $install_dir
 	./act_runner register --instance $gitea_url --token $token --no-interactive
